--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,18 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 title: claztec hacks
 email: claztec@gmail.com
 description: 개발하면서 쓰는 이야기
@@ -9,14 +23,25 @@ github_username:  claztec
 blog: http://blog.claztec.net
 
 # Build settings
-#markdown: kramdown
-markdown: redcarpet
-
-gems: [jekyll-paginate, jekyll-gist]
-
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
 pages_list:
   About: '/about'
   Archive: '/archive'
   Feed: '/atom.xml'
 
 paginate: 10
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
