--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: claztec hacks
 email: claztec@gmail.com
+author: Derek Choi
 description: 개발하면서 쓰는 이야기
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://hacks.claztec.net" # the base hostname & protocol for your site
@@ -32,7 +33,17 @@ pages_list:
   Archive: '/archive'
   Feed: '/atom.xml'
 
-paginate: 10
+
+paginate_path: '/page/:num'
+
+pagination:
+  enabled: true
+  per_page: 10
+  permalink: '/page/:num/'
+  title_suffix: ' - page :num'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
