--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ pages_list:
   Archive: '/archive'
   Feed: '/atom.xml'
 
-disqus:F
-  shortname: claztec-hacks
+disqus:
+  shortname: 'claztec-hacks'
 
 #paginate: 10
 paginate_path: '/page/:num'
